# tensorflow-serving-client-java

./: .travis.yml  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  build.gradle  build.sh  crate.toml  go.mod  mod.go  mono.csproj  package.json  setup.py  test.sh  update.sh
.github/workflows/: main.yml
csharp/: ModelServiceGrpc.cs  PredictionServiceGrpc.cs  SessionServiceGrpc.cs
csharp/Tensorflow/: AllocationDescription.cs  AttrValue.cs  Cluster.cs  Config.cs  CostGraph.cs  Debug.cs  Example.cs  Feature.cs  Function.cs  Graph.cs  MetaGraph.cs  NamedTensor.cs  NodeDef.cs  OpDef.cs  ResourceHandle.cs  RewriterConfig.cs  SavedObjectGraph.cs  Saver.cs  StepStats.cs  Struct.cs  Tensor.cs  TensorDescription.cs  TensorShape.cs  Types.cs  (+4 more)
go/: lib.go
gradle/: golang.gradle  grpc.gradle  java.gradle  mono.gradle  ossrh.gradle  rust.gradle  wheel.gradle
rust/: allocation_description.rs  attr_value.rs  classification.rs  cluster.rs  config.rs  cost_graph.rs  debug.rs  error_codes.rs  example.rs  feature.rs  file_system_storage_path_source.rs  function.rs  get_model_metadata.rs  get_model_status.rs  graph.rs  inference.rs  input.rs  lib.rs  log_collector_config.rs  logging_config.rs  meta_graph.rs  model.rs  model_management.rs  model_server_config.rs  model_service.rs  model_service_grpc.rs  named_tensor.rs  node_def.rs  op_def.rs  predict.rs  prediction_service.rs  prediction_service_grpc.rs  regression.rs  resource_handle.rs  rewriter_config.rs  saved_object_graph.rs  saver.rs  session_service.rs  session_service_grpc.rs  status.rs  (+10 more)
tests/: docker-compose.yml  test.sh
(+344 files in other folders)
