[package]
edition = "2018"
name = "tensorflow-serving-client"
version = "2.5.1"
authors = ["P Chen <figroc@gmail.com>"]
license = "Apache-2.0"
description = "A prebuilt tensorflow serving client from the tensorflow serving proto files"
readme = "README.md"
homepage = "https://github.com/figroc/tensorflow-serving-client"
repository = "https://github.com/figroc/tensorflow-serving-client"
documentation = "https://docs.rs/tensorflow-serving-client"
categories = ["api-bindings", "science"]

[dependencies]
futures = "0.3.15"
grpcio = "0.7.0"
protobuf = "2.22.0"

[lib]
crate-type = ["rlib"]

path = "rust/lib.rs"
